--- a/package.json
+++ b/package.json
@@ -15,17 +15,25 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "antd": "^5.1.5",
+    "axios": "^1.2.6",
+    "axios-auth-refresh": "^3.3.6",
+    "cookie": "^0.5.0",
+    "cors": "^2.8.5",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "next": "13.1.2",
+    "next-auth": "^4.19.0",
     "next-with-less": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "set-cookie-parser": "^2.5.1",
+    "siwe": "^1.1.6",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
