--- a/package.json
+++ b/package.json
@@ -26,8 +26,20 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "autoprefixer": "^10.4.13",
+    "cz-customizable": "^6.3.0",
+    "husky": "^7.0.4",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": ".cz-configrc.js"
+    }
   }
 }
