--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "antd": "^5.1.5",
+    "axios": "^1.3.4",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "next": "13.1.2",
+    "next-auth": "^4.20.1",
     "next-with-less": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
