--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "plugins": [
       {
         "name": "next"
+      },
+      {
+        "name": "typescript-plugin-css-modules"
       }
     ],
     "baseUrl": ".",
@@ -24,6 +27,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/pages/_error.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/pages/_error.js",
+    "src/types/index.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
