--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "cz-customizable": "^6.3.0",
     "husky": "^7.0.4",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript-plugin-css-modules": "^4.2.2"
   },
   "config": {
     "commitizen": {
