--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/pages/_error.js",
-    "src/types/index.d.ts"
+    "src/types/index.d.ts",
+    "server.js"
   ],
   "exclude": ["node_modules"]
 }
