--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:node-middleware": "dotenv -e .env.dev node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -17,13 +18,19 @@
     "@types/react-dom": "18.0.10",
     "antd": "^5.1.5",
     "axios": "^1.3.4",
+    "dotenv-cli": "^7.1.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
+    "ioredis": "^5.3.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "next": "13.1.2",
     "next-auth": "^4.20.1",
     "next-with-less": "^2.0.5",
+    "process": "^0.11.10",
+    "qs": "^6.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
@@ -31,6 +38,8 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/express": "^4.17.17",
+    "@types/qs": "^6.9.7",
     "autoprefixer": "^10.4.13",
     "cz-customizable": "^6.3.0",
     "husky": "^7.0.4",
