--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,9 @@
-REACT_APP_HOST = "http://localhost:8888"
+###
+ # @Author       : Pear107
+ # @Date         : 2023-04-05 00:10:25
+ # @LastEditors  : Pear107
+ # @LastEditTime : 2023-05-08 09:09:35
+ # @FilePath     : \q-face-web\.env.development
+ # @Description  : 头部注释
+### 
+REACT_APP_HOST = "http://127.0.0.1:8888"
