--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "next": "13.1.2",
-    "next-auth": "^4.20.1",
     "next-with-less": "^2.0.5",
     "process": "^0.11.10",
     "qs": "^6.11.1",
     "react": "18.2.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
@@ -40,6 +40,7 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@types/express": "^4.17.17",
     "@types/qs": "^6.9.7",
+    "@types/react-cookies": "^0.1.0",
     "autoprefixer": "^10.4.13",
     "cz-customizable": "^6.3.0",
     "husky": "^7.0.4",
